--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,9 @@
 #
 #Wed May 24 19:27:37 WEST 2023
-mapping_version=1.19.2
-version=3.4
+mapping_version=1.19.4
+version=3.5-alpha
 mod_name=Quark
-mc_version=1.19.2
+mc_version=1.19.4
 mapping_channel=official
 mod_id=quark
 build_number=403
