--- a/contributors.properties
+++ b/contributors.properties
@@ -894,3 +894,17 @@ xhonter=2
 xdata3=2
 meep706=1
 LocoRock=2
+junescript=1
+Stereo528=2
+Slayer_7u7=5
+SamFlowers=2
+DATSniperFTW=2
+shiranno=1
+LordBepis=2
+Symbiote13=2
+SquishySeal8=2
+Wolverale12=2
+DarrSkunk=2
+Erratix3107=1
+MythicHH=2
+Infernal187=2
