--- a/build.gradle
+++ b/build.gradle
@@ -73,29 +73,15 @@ mixin {
     add sourceSets.main, 'quark.mixins.refmap.json'
     config 'quark.mixins.json'
     config 'quark_integrations.mixins.json'
+    config 'zeta.mixins.json'
+    config 'zeta_forge.mixins.json'
 }
 
 repositories {
     maven {
-        // for AutoRegLib
-        name "blamejared"
-        url "https://maven.blamejared.com/"
-        content {
-            includeGroup "vazkii.autoreglib"
-        }
-    }
-    maven {
         name "TerraformersMC"
         url "https://maven.terraformersmc.com/"
     }
-    /*maven {
-        // for JEI
-        name "progwml6"
-        url "https://dvs1.progwml6.com/files/maven"
-        content {
-            includeGroup "mezz.jei"
-        }
-    }*/
     maven {
         name "cursemaven"
         url "https://www.cursemaven.com"
@@ -123,7 +109,6 @@ dependencies {
     runtimeOnly fg.deobf("dev.emi:emi-forge:${deps.emi}")
 
     implementation fg.deobf("com.github.glitchfiend:TerraBlender-forge:${deps.terrablender}")
-    //implementation fg.deobf("vazkii.autoreglib:AutoRegLib:${deps.arl}")
     implementation fg.deobf("curse.maven:jei-238222:${deps.jei}")
     implementation fg.deobf("curse.maven:flan-forge-493246:${deps.flan}")
     implementation fg.deobf("curse.maven:lootr-361276:${deps.lootr}")
