--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -71,3 +71,4 @@ public net.minecraft.world.level.block.state.BlockBehaviour$BlockStateBase f_605
 public net.minecraft.world.entity.animal.TropicalFish m_30064_(I)I # getPatternVariant
 public net.minecraft.world.item.context.BlockPlaceContext f_43628_ # replaceClicked
 public net.minecraft.client.gui.Gui f_279580_ # GUI_ICONS_LOCATION
+public net.minecraft.world.level.block.state.BlockBehaviour$BlockStateBase f_283893_ # mapColor
