--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ ext.config = parseConfig(configFile)
 ext.deps = parseConfig(depsFile)
 
 version = "${config.version}-${config.build_number}"
-group = "vazkii.${config.mod_id}" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = "org.violetmoon.${config.mod_id}" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = config.mod_name
 
 compileJava.options.compilerArgs << "-Xlint:all,-classfile,-processing,-deprecation"
