--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -77,3 +77,4 @@ public-f net.minecraft.advancements.critereon.ContextAwarePredicate f_285622_ # 
 public-f net.minecraft.advancements.critereon.ContextAwarePredicate f_285559_ # compositePredicates
 public net.minecraft.core.RegistrySetBuilder$BuildState
 public net.minecraft.core.RegistrySetBuilder m_254900_(Lnet/minecraft/core/RegistryAccess;)Lnet/minecraft/core/RegistrySetBuilder$BuildState; # createState
+public net.minecraft.client.resources.model.ModelManager$ReloadState
