--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,9 @@
 #Sat Oct 14 17:25:20 UTC 2023
 mapping_version=1.20.1
-version=3.4
+version=4.0-alpha
 mod_name=Quark
 mc_version=1.20.1
 mapping_channel=official
 mod_id=quark
-build_number=417
+build_number=420
 dir_output=../Build Output/Quark/
