--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,7 +1,7 @@
 forge=47.1.3
 jei=4712868
-#arl=1.8.2-56.125
 terrablender=1.20.1-3.0.0.169
 flan=4819286
 lootr=4608503
 emi=1.0.24+1.20.1
+spark=4738952
