remove dupe entry & update to match main branch

--- a/contributors.properties
+++ b/contributors.properties
@@ -881,7 +881,6 @@ jeniuslu=2
 Bobisnotap=1
 Rosenator=2
 MrBons4i=2
-VolrathStormborn=2
 Lorykeee=2
 TheMelon27=2
 YYMB=2
@@ -908,3 +907,11 @@ DarrSkunk=2
 Erratix3107=1
 MythicHH=2
 Infernal187=2
+Fuxedo_Tox=2
+tangolikeelk=1
+alex2005a=2
+billbertking1=2
+badsbee=2
+Guildes_=3
+peapen_teh_elf=2
+julienmsorel=2
