Masons now trade for quark stones too

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -76,3 +76,6 @@ public-f net.minecraft.advancements.critereon.ItemUsedOnLocationTrigger$TriggerI
 public-f net.minecraft.advancements.critereon.ContextAwarePredicate f_285559_ # compositePredicates
 public net.minecraft.core.RegistrySetBuilder$BuildState
 public net.minecraft.client.resources.model.ModelManager$ReloadState
+public net.minecraft.world.entity.npc.VillagerTrades$ItemsForEmeralds
+public net.minecraft.world.entity.npc.VillagerTrades$ItemsAndEmeraldsToItems
+public net.minecraft.world.entity.npc.VillagerTrades$EmeraldForItems
