--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,14 @@ mixin {
 
 repositories {
     maven {
+        // for Zeta
+        name "blamejared"
+        url "https://maven.blamejared.com/"
+        content {
+            includeGroup "org.violetmoon.zeta"
+        }
+    }
+    maven {
         name "TerraformersMC"
         url "https://maven.terraformersmc.com/"
     }
@@ -108,7 +116,8 @@ dependencies {
     runtimeOnly fg.deobf("dev.emi:emi-forge:${deps.emi}")
     runtimeOnly fg.deobf("curse.maven:spark-361579:${deps.spark}")
 
-    compileOnly fg.deobf("com.github.glitchfiend:TerraBlender-forge:${deps.terrablender}")
+    implementation fg.deobf("org.violetmoon.zeta:Zeta:${deps.zeta}")
+    implementation fg.deobf("com.github.glitchfiend:TerraBlender-forge:${deps.terrablender}")
     implementation fg.deobf("curse.maven:jei-238222:${deps.jei}")
     implementation fg.deobf("curse.maven:flan-forge-493246:${deps.flan}")
     implementation fg.deobf("curse.maven:lootr-361276:${deps.lootr}")
