--- a/build.gradle
+++ b/build.gradle
@@ -78,11 +78,11 @@ repositories {
     maven {
         // for Zeta
         name "blamejared"
-        url "https://maven.blamejared.com/"
+        url "https://maven.blamejared.com"
     }
     maven {
         name "TerraformersMC"
-        url "https://maven.terraformersmc.com/"
+        url "https://maven.terraformersmc.com"
     }
     maven {
         name "cursemaven"
@@ -96,7 +96,6 @@ repositories {
         name "jitpack"
         url "https://jitpack.io"
     }
-
 }
 
 dependencies {
@@ -111,7 +110,7 @@ dependencies {
     runtimeOnly fg.deobf("dev.emi:emi-forge:${deps.emi}")
     runtimeOnly fg.deobf("curse.maven:spark-361579:${deps.spark}")
 
-    implementation fg.deobf("org.violetmoon.zeta:Zeta:${deps.zeta}")
+    implementation("org.violetmoon.zeta:Zeta:${deps.zeta}")
     implementation fg.deobf("com.github.glitchfiend:TerraBlender-forge:${deps.terrablender}")
     implementation fg.deobf("curse.maven:jei-238222:${deps.jei}")
     implementation fg.deobf("curse.maven:flan-forge-493246:${deps.flan}")
