Use ACTUALLY FIXED zeta JiJ artifact

--- a/build.gradle
+++ b/build.gradle
@@ -234,6 +234,8 @@ publishing {
             artifact sourcesJar {
                 classifier 'sources'
             }
+
+            jarJar.component(it)
         }
     }
 
