--- a/build.gradle
+++ b/build.gradle
@@ -109,7 +109,7 @@ dependencies {
     runtimeOnly fg.deobf("dev.emi:emi-forge:${deps.emi}")
     runtimeOnly fg.deobf("curse.maven:spark-361579:${deps.spark}")
 
-    implementation("org.violetmoon.zeta:Zeta:${deps.zeta}")
+    implementation fg.deobf("org.violetmoon.zeta:Zeta:${deps.zeta}")
     implementation fg.deobf("com.github.glitchfiend:TerraBlender-forge:${deps.terrablender}")
     implementation fg.deobf("curse.maven:jei-238222:${deps.jei}")
     implementation fg.deobf("curse.maven:flan-forge-493246:${deps.flan}")
